Fix featured containers spacing

--- a/app/assets/stylesheets/signed_in_home.scss
+++ b/app/assets/stylesheets/signed_in_home.scss
@@ -122,7 +122,6 @@
 }
 
 .artists-index, .albums-index {
-  margin-top: 70px;
   padding: 10px;
   padding-left: 20px;
   color: white;
@@ -134,6 +133,10 @@
     letter-spacing: -.04em;
     margin-bottom: 15px;
   }
+}
+
+.artists-index {
+  margin-top: 70px;
 }
 
 .artists-index:hover, .albums-index:hover {
